pushed current work

--- a/_posts/2017-07-07-rest.markdown
+++ b/_posts/2017-07-07-rest.markdown
@@ -73,6 +73,10 @@ Disadvange:
 To minimized mandatory features that must be implemented,
 allow functionality to be extended by additional scripts when necessary.
 
+# Examples
+
+Used to define 
+
 
 
 
