--- a/_posts/2017-10-16-gpdr.md
+++ b/_posts/2017-10-16-gpdr.md
@@ -25,9 +25,12 @@ Yes
 * Name + Zipcode
 * Phone number
 * Social Security number
+* Company + Jobtitle (if its a relatively small startup, perhaps not if its a large company)
 
 No
-* Most jobtitle (there's only one POTUS at a time though)
+* Most jobtitles. For example, there are many people
+	whose official job title is 'salesperson'.
+	'most' jobtitles, not 'all' jobtitles, as there's only one POTUS at a time.
 
 ## Sensitive data
 
@@ -36,7 +39,6 @@ GDPR requires explicit consent of the individual to collect this
 Anything that can cause a large body of people to hate you.
 * Political affiliation
 * Sexual orientation
-
 
 ## Definitions
 
