Edit spelling mistakes

--- a/_posts/2017-10-12-slow-vpn.md
+++ b/_posts/2017-10-12-slow-vpn.md
@@ -6,39 +6,27 @@ date:   2017-10-12
 
 ## [What a VPN is for](https://www.whatismyip.com/what-is-a-vpn/)
 
-* Corporations: add security to their networks
-in order to protect company data.
+* Corporations: add security to their networks in order to protect company data.
 * To protect privacy on the internet
 * To access sites that are limited in certain countries
 
 ## How it provides privacy
 
 User's initial IP address is replaced with the one from the VPN provider.
-Example: If you live in San Francisco and use a VPN, 
-	you can pretend you are from New York.
+Example: If you live in San Francisco and use a VPN, you can pretend you are from New York.
 
 ## How it works
 
 * Encrypt all online data transfers
 * Integrity checks to make sure the connection is not hijacked and no data is lost
 
-## Why it [slows down your internet connection speed]
-	(https://www.cactusvpn.com/vpn/vpn-slow-down-internet/)
+## Why it [slows down your internet connection speed](https://www.cactusvpn.com/vpn/vpn-slow-down-internet/)
 
-* Physical distance between your location and distance to the VPN server.
-	Data packets need to travel back and forth over the VPN.
-	Example: Connecting from China -> Mountain View VPN server
-		takes a long time. 
-		Connecting from San Francisco -> Mountain View VPN server is fast. 
-* Server load: too many user connecting to a VPN servers at once.
-	Problematic with free VPN providers.
-* Secure encryption protocol: The high the level of encryption,
-	the slower the VPN speed.
-* ISP speed limitation: 
-	High speed connections are fine as they allow > 10MB/s,
-	but 3G or dial-up connections might limit the speed of the VPN.
-* Processor speed of your laptop:
-	Encrypt/decrypt data more quickly
+* Physical distance between your location and distance to the VPN server. Data packets need to travel back and forth over the VPN. Example: Connecting from China -> Mountain View takes a long time. Connecting from San Francisco -> Mountain View is fast. 
+* Server load: too many user connecting to a VPN servers at once. Problematic with free VPN providers.
+* Secure encryption protocol: The high the level of encryption, the slower the VPN speed.
+* ISP speed limitation: High speed connections are fine as they allow > 10MB/s, but 3G or dial-up connections might limit the speed of the VPN.
+* Processor speed of your laptop: Encrypt/decrypt data more quickly
 * Reliability of VPN server: how much packet loss is there? 
 
 
