--- a/_posts/2017-10-16-gpdr.md
+++ b/_posts/2017-10-16-gpdr.md
@@ -28,9 +28,8 @@ Yes
 * Company + Jobtitle (if its a relatively small startup, perhaps not if its a large company)
 
 No
-* Most jobtitles. For example, there are many people
-	whose official job title is 'salesperson'.
-	'most' jobtitles, not 'all' jobtitles, as there's only one POTUS at a time.
+* Most jobtitles. For example, there are many people whose official job title is 'salesperson'.
+* _Most_ jobtitles, not _all_ jobtitles. Example: There's only one POTUS at a time.
 
 ## Sensitive data
 
@@ -79,14 +78,12 @@ Anything that can cause a large body of people to hate you.
 
 * Concise, easy to understand
 * Not something that needs Law School + Bar training to figure out
-* If you make a product marketed to children,
-	children (not just adults) must be able to understand the privacy notice
+* If you make a product marketed to children, children (not just adults) must be able to understand the privacy notice
 
 ## Data Portability
 
 * Right to be forgotten
-* Reasonable exceptions: If you did something that got into the newspapers,
-	Google / other companies are NOT required to delete it.
+* Reasonable exception: If you did something that got into the newspapers, Google / other companies are NOT required to delete it
 
 ## Security Program requirements
 
