--- a/_posts/2019-01-01-transprk.md
+++ b/_posts/2019-01-01-transprk.md
@@ -25,7 +25,7 @@ In TransPRK, the epithelium of your corneas are removed before your
 corneas are reshaped. Your corneas then grow back after a few days.
 
 The downside to doing TransPRK is a longer recovery time that Lasik
-- patients need to take at least 5 days to recover, as compared
+patients need to take at least 5 days to recover, as compared
 to Lasik patients who can pretty much do the surgery today and 
 resume normal activities the next day.
 
